Fixed bug #73239 (DateTime shows strange error message with invalid timezone)