ext/date/tests/ini_set_incorrect.phpt
@@ -7,4 +7,4 @@ ini_set("date.timezone", "Incorrect/Zone");
 
 ?>
 --EXPECTF--
-Warning: ini_set(): Invalid date.timezone value 'Incorrect/Zone', we selected the timezone 'UTC' for now. in %sini_set_incorrect.php on line %d
+Warning: ini_set(): Invalid date.timezone value 'Incorrect/Zone' in %sini_set_incorrect.php on line %d
